Fix surfaces flickering

--- a/src/scss/components/block.scss
+++ b/src/scss/components/block.scss
@@ -2,6 +2,7 @@
     flex-shrink: 0;
     display: flex;
     transform-style: preserve-3d;
+    backface-visibility: hidden;
 
     &--empty {
         transform: none !important;
