--- a/src/scss/components/surface.scss
+++ b/src/scss/components/surface.scss
@@ -2,6 +2,8 @@
     position: absolute;
     flex-shrink: 0;
     transform-style: preserve-3d;
+    backface-visibility: hidden;
+    background-color: $transp-white;
     background-size: auto 100%;
     background-position: center center;
     box-shadow: 0 0 0 1px rgba(0,0,0,.5);
@@ -15,6 +17,7 @@
 .surface--front {
     position: relative;
     width: 100%;
+    backface-visibility: visible;
     cursor: pointer;
 }
 
@@ -26,9 +29,14 @@
     background-repeat: no-repeat;
 }
 
+.surface--back {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
 .surface--top {
     width: 100%;
-    transform: rotateX(-90deg);
     transform-origin: top;
 }
 
@@ -41,21 +49,32 @@
 }
 
 .surface--side {
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1);
-    transform-style: preserve-3d;
+    box-shadow: 1px 1px 0 0 rgba(0,0,0,.1);
 }
 
 .surface--side-left {
-    left: 0;
+    background-color: transparent;
     transform-origin: left;
     transform: rotateY(90deg);
+
+    .block--first & {
+        background-color: $transp-white;
+        backface-visibility: visible;
+    }
 }
 
 .surface--side-right {
     right: 0;
+    background-color: transparent;
     transform-origin: right;
     transform: rotateY(-90deg);
+
+    .block--last & {
+        background-color: $transp-white;
+        backface-visibility: visible;
+    }
 }
+
 
 .walls--front-left-right .wall--front .surface--side::before,
 .walls--front-left-right .wall--front .surface--side::after {
@@ -68,6 +87,8 @@
     padding-top: 100%;
 }
 
+/* Corners
+------------------------------*/
 .walls--front-left-right .wall--front .surface--side::before {
     top: 0;
     transform-origin: top;
@@ -80,7 +101,8 @@
     transform: rotateX(90deg);
 }
 
-
+/* Sizes
+------------------------------*/
 .surface__size {
     position: absolute;
     bottom: 100%;
