--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -19,6 +19,7 @@
     margin: 0 32px;
     flex-shrink: 0;
     flex-grow: 1;
+    transform-style: preserve-3d;
     /*outline: 1px solid green;*/
 }
 
