--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,1 +1,1 @@
-$transp-white: hsla(0, 0%, 100%, .5);
+$transp-white: hsla(0, 0%, 100%, .75);
